ghc-4335c07/testsuite/tests/backpack/should_fail/bkpfail21.bkp
unit p where
    signature A where
        data T
    signature C(module C, T) where
        import A
unit q where
    signature B where
        data T
    signature C(module C, T) where
        import B
unit r where
    dependency p[A=<H1>,C=<H3>]
    dependency q[B=<H2>,C=<H3>]
